--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,31 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
+    <RatingBar
+        android:id="@+id/rating_bar1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <RatingBar
+        android:id="@+id/rating_bar2"
+        style="?android:attr/ratingBarStyleSmall"
+        android:stepSize="1"
+        android:numStars="10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <RatingBar
+        android:id="@+id/rating_bar3"
+        style="?android:attr/ratingBarStyleIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/btn_incr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="증가시키기"/>
 
+    <Button
+        android:id="@+id/btn_decr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="증가시키기"/>
 </LinearLayout>
